--- a/AboutSAIT.html
+++ b/AboutSAIT.html
@@ -104,9 +104,11 @@
                 </div>
             </li>
         </ul>
-        <li class="header__search">
-            <i class="fas fa-search"></i>
-        </li>
+        <div class="header__search">
+            <a href="">
+                <i class="fas fa-search"></i>
+            </a>
+        </div>
     </header>
 </body>
 </html>
