--- a/cover.html
+++ b/cover.html
@@ -24,6 +24,61 @@
                     <a href="AboutSAIT.html" class="column-title">
                         About SAIT
                     </a>
+                    <div class="mega-menu">
+                        <ul class="hidden-column_1">
+                            <li class="hidden-column__title">
+                                About SAIT
+                            </li>
+                            <li class="depth_text depth1-1">
+                                <a href="">Who We Are</a>
+                            </li>
+                            <li class="depth_text depth1-2">
+                                <a href="">History of Progress</a>
+                            </li>
+                            <li class="depth_text depth1-3">
+                                <a href="">Global Lab</a>
+                            </li>
+                            <li class="depth_text depth1-4">
+                                <a href="">Contact Us</a>
+                            </li>
+                        </ul>
+                        <ul class="hidden-column_2">
+                            <li class="hidden-column__title">
+                                Research Areas
+                            </li>
+                            <li class="depth_text depth2-1">
+                                <a href="">What We Do</a>
+                            </li>
+                            <li class="depth_text depth2-2">
+                                <a href="">Publications</a>
+                            </li>
+                            <li class="depth_text depth2-3">
+                                <a href="">Research Infra</a>
+                            </li>
+                            <li class="depth_text depth2-4">
+                                <a href="">Human Augmentation</a>
+                            </li>
+                        </ul>
+                        <ul class="hidden-column_3">
+                            <li class="hidden-column__title">
+                                News & Events
+                            </li>
+                            <li class="depth_text depth3-1">
+                                <a href="">Press</a>
+                            </li>
+                            <li class="depth_text depth3-2">
+                                <a href="">AI Forum</a>
+                            </li>
+                            <li class="depth_text depth3-3">
+                                <a href="">AI Researcher of the Year</a>
+                            </li>
+                        </ul>
+                        <ul class="hidden-column_4">
+                            <li class="depth_text depth4-1">
+                                <a href="">Application Process</a>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
                 <li class="header__column-two">
                     <a href="ResearchAreas.html" class="column-title">
@@ -46,63 +101,6 @@
                     </a>
                 </li>
             </ul>
-        </div>
-        <div class="header__hidden-bar">
-            <ul class="hidden">
-                <li class="hidden-column">
-                    <h3 class="hidden-title">About SAIT</h3>
-                    <ul class="hidden-column1__depth depth">
-                        <li class="depth_text depth1-1">
-                            <a href="">Who We Are</a>
-                        </li>
-                        <li class="depth_text depth1-2">
-                            <a href="">History of Progress</a>
-                        </li>
-                        <li class="depth_text depth1-3">
-                            <a href="">Global Lab</a>
-                        </li>
-                        <li class="depth_text depth1-4">
-                            <a href="">Contact Us</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="hidden-column">
-                    <h3 class="hidden-title">Research Areas</h3>
-                    <ul class="hidden-column2__depth depth">
-                        <li class="depth_text depth2-1">
-                            <a href="">What We Do</a>
-                        </li>
-                        <li class="depth_text depth2-2">
-                            <a href="">Publications</a>
-                        </li>
-                        <li class="depth_text depth2-3">
-                            <a href="">Research Infra</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="hidden-column">
-                    <h3 class="hidden-title">News & Events</h3>
-                    <ul class="hidden-column3__depth depth">
-                        <li class="depth_text depth3-1">
-                            <a href="">Press</a>
-                        </li>
-                        <li class="depth_text depth3-2">
-                            <a href="">AI Forum</a>
-                        </li>
-                        <li class="depth_text depth3-3">
-                            <a href="">AI Researcher of the Year</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="hidden-column">
-                    <h3 class="hidden-title">Join Us</h3>
-                    <ul class="hidden-column4__depth depth">
-                        <li class="depth_text depth4-1">
-                            <a href="">Application Process</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>  
         </div>
         </header>
         
