hidden-bar problem sloved
hidden-bar problem sloved

--- a/cover.html
+++ b/cover.html
@@ -74,6 +74,9 @@
                             </li>
                         </ul>
                         <ul class="hidden-column_4">
+                            <li class="hidden-column__title">
+                                Join Us
+                            </li>
                             <li class="depth_text depth4-1">
                                 <a href="">Application Process</a>
                             </li>
@@ -84,16 +87,190 @@
                     <a href="ResearchAreas.html" class="column-title">
                         Research Areas
                     </a>
+                    <div class="mega-menu">
+                        <ul class="hidden-column_1">
+                            <li class="hidden-column__title">
+                                About SAIT
+                            </li>
+                            <li class="depth_text depth1-1">
+                                <a href="">Who We Are</a>
+                            </li>
+                            <li class="depth_text depth1-2">
+                                <a href="">History of Progress</a>
+                            </li>
+                            <li class="depth_text depth1-3">
+                                <a href="">Global Lab</a>
+                            </li>
+                            <li class="depth_text depth1-4">
+                                <a href="">Contact Us</a>
+                            </li>
+                        </ul>
+                        <ul class="hidden-column_2">
+                            <li class="hidden-column__title">
+                                Research Areas
+                            </li>
+                            <li class="depth_text depth2-1">
+                                <a href="">What We Do</a>
+                            </li>
+                            <li class="depth_text depth2-2">
+                                <a href="">Publications</a>
+                            </li>
+                            <li class="depth_text depth2-3">
+                                <a href="">Research Infra</a>
+                            </li>
+                            <li class="depth_text depth2-4">
+                                <a href="">Human Augmentation</a>
+                            </li>
+                        </ul>
+                        <ul class="hidden-column_3">
+                            <li class="hidden-column__title">
+                                News & Events
+                            </li>
+                            <li class="depth_text depth3-1">
+                                <a href="">Press</a>
+                            </li>
+                            <li class="depth_text depth3-2">
+                                <a href="">AI Forum</a>
+                            </li>
+                            <li class="depth_text depth3-3">
+                                <a href="">AI Researcher of the Year</a>
+                            </li>
+                        </ul>
+                        <ul class="hidden-column_4">
+                            <li class="hidden-column__title">
+                                Join Us
+                            </li>
+                            <li class="depth_text depth4-1">
+                                <a href="">Application Process</a>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
                 <li class="header__column-three">
                     <a href="News&Events.html" class="column-title">
                         News & Events
                     </a>
+                    <div class="mega-menu">
+                        <ul class="hidden-column_1">
+                            <li class="hidden-column__title">
+                                About SAIT
+                            </li>
+                            <li class="depth_text depth1-1">
+                                <a href="">Who We Are</a>
+                            </li>
+                            <li class="depth_text depth1-2">
+                                <a href="">History of Progress</a>
+                            </li>
+                            <li class="depth_text depth1-3">
+                                <a href="">Global Lab</a>
+                            </li>
+                            <li class="depth_text depth1-4">
+                                <a href="">Contact Us</a>
+                            </li>
+                        </ul>
+                        <ul class="hidden-column_2">
+                            <li class="hidden-column__title">
+                                Research Areas
+                            </li>
+                            <li class="depth_text depth2-1">
+                                <a href="">What We Do</a>
+                            </li>
+                            <li class="depth_text depth2-2">
+                                <a href="">Publications</a>
+                            </li>
+                            <li class="depth_text depth2-3">
+                                <a href="">Research Infra</a>
+                            </li>
+                            <li class="depth_text depth2-4">
+                                <a href="">Human Augmentation</a>
+                            </li>
+                        </ul>
+                        <ul class="hidden-column_3">
+                            <li class="hidden-column__title">
+                                News & Events
+                            </li>
+                            <li class="depth_text depth3-1">
+                                <a href="">Press</a>
+                            </li>
+                            <li class="depth_text depth3-2">
+                                <a href="">AI Forum</a>
+                            </li>
+                            <li class="depth_text depth3-3">
+                                <a href="">AI Researcher of the Year</a>
+                            </li>
+                        </ul>
+                        <ul class="hidden-column_4">
+                            <li class="hidden-column__title">
+                                Join Us
+                            </li>
+                            <li class="depth_text depth4-1">
+                                <a href="">Application Process</a>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
                 <li class="header__column-four">
                     <a href="JoinUs.html" class="column-title">
                         Join Us
                     </a>
+                     <div class="mega-menu">
+                        <ul class="hidden-column_1">
+                            <li class="hidden-column__title">
+                                About SAIT
+                            </li>
+                            <li class="depth_text depth1-1">
+                                <a href="">Who We Are</a>
+                            </li>
+                            <li class="depth_text depth1-2">
+                                <a href="">History of Progress</a>
+                            </li>
+                            <li class="depth_text depth1-3">
+                                <a href="">Global Lab</a>
+                            </li>
+                            <li class="depth_text depth1-4">
+                                <a href="">Contact Us</a>
+                            </li>
+                        </ul>
+                        <ul class="hidden-column_2">
+                            <li class="hidden-column__title">
+                                Research Areas
+                            </li>
+                            <li class="depth_text depth2-1">
+                                <a href="">What We Do</a>
+                            </li>
+                            <li class="depth_text depth2-2">
+                                <a href="">Publications</a>
+                            </li>
+                            <li class="depth_text depth2-3">
+                                <a href="">Research Infra</a>
+                            </li>
+                            <li class="depth_text depth2-4">
+                                <a href="">Human Augmentation</a>
+                            </li>
+                        </ul>
+                        <ul class="hidden-column_3">
+                            <li class="hidden-column__title">
+                                News & Events
+                            </li>
+                            <li class="depth_text depth3-1">
+                                <a href="">Press</a>
+                            </li>
+                            <li class="depth_text depth3-2">
+                                <a href="">AI Forum</a>
+                            </li>
+                            <li class="depth_text depth3-3">
+                                <a href="">AI Researcher of the Year</a>
+                            </li>
+                        </ul>
+                        <ul class="hidden-column_4">
+                            <li class="hidden-column__title">
+                                Join Us
+                            </li>
+                            <li class="depth_text depth4-1">
+                                <a href="">Application Process</a>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
                 <li class="header__search">
                     <a href="" class="column-title">
