--- a/cover.html
+++ b/cover.html
@@ -296,10 +296,6 @@
                         SAIT creates disruptive technologies as well as new technology convergence
                         <br>combining Samsung‘s most advanced technologies
                     </li>
-                    <li class="main__arrow">
-                        <i class="fas fa-arrow-left"></i>
-                        <i class="fas fa-arrow-right"></i>
-                    </li>
                     <li class="main__read-more">
                         <i class="fas fa-long-arrow-alt-right"> Read more</i>
                     </li>
@@ -320,153 +316,220 @@
                 </ul>
             </li>
             <li class="slide-2">
-                <img src="images/main__wallpaper2.jpg" class="main__wallpaper">
-                <h1 class="slide__title title-2 slide-text">
-                    Samsung AI Researcher of the Year                </h1>
-                <div class="slide__explain explain-2 slide-text">
-                    Submission : 22nd July ~ 7th September 2020
-                </div>
+                <ul class="slide-wrap">
+                    <li>
+                    <img src="images/main__wallpaper2.jpg" class="main__wallpaper">
+                    </li>
+                    <li class="slide__title title-2 slide-text">
+                        Samsung AI Researcher of the Year                
+                    </li>
+                    <li class="slide__explain explain-2 slide-text">
+                        Submission : 22nd July ~ 7th September 2020
+                    </li>
+                    <li class="main__read-more">
+                        <i class="fas fa-long-arrow-alt-right"> Read more</i>
+                    </li>
+                    <li class="slide__btn btn">
+                        <span>
+                            <button class="btn-1"></button>
+                        </span>
+                        <span>
+                            <button class="btn-2"></button>
+                        </span>
+                        <span>
+                            <button class="btn-3"></button>
+                        </span>
+                        <span>
+                            <button class="btn-4"></button>
+                        </span>
+                    </li>
+                </ul>
             </li>
             <li class="slide-3">
-                <img src="images/main__wallpaper3.jpg" class="main__wallpaper">
-                <h1 class="slide__title title-3 slide-text">
-                    Boundless Search<br>
-                    for Breakthroughs
-                </h1>
-                <div class="slide__explain explain-3 slide-text">
-                    SAIT is Samsung‘s R&D hub,<br>
-                    established as the incubator for cutting-edge technologies
-                </div>
+                <ul class="slide-wrap">
+                    <li>
+                    <img src="images/main__wallpaper3.jpg" class="main__wallpaper">
+                    </li>   
+                    <li class="slide__title title-3 slide-text">
+                        Boundless Search<br>
+                        for Breakthroughs
+                    </li>
+                    <li class="slide__explain explain-3 slide-text">
+                        SAIT is Samsung‘s R&D hub,<br>
+                        established as the incubator for cutting-edge technologies
+                    </li>
+                    <li class="main__read-more">
+                        <i class="fas fa-long-arrow-alt-right"> Read more</i>
+                    </li>
+                    <li class="slide__btn btn">
+                        <span>
+                            <button class="btn-1"></button>
+                        </span>
+                        <span>
+                            <button class="btn-2"></button>
+                        </span>
+                        <span>
+                            <button class="btn-3"></button>
+                        </span>
+                        <span>
+                            <button class="btn-4"></button>
+                        </span>
+                    </li>
+                </ul>
             </li>
             <li class="slide-4">
-                <img src="images/main__wallpaper4.jpg" class="main__wallpaper">
-                <h1 class="slide__title title-4 slide-text">
-                    2020<br>AI Research Outreach
-                </h1>
-                <div class="slide__explain explain-4 slide-text">
-                    Submission : 22nd June ~ 25th August
-                </div>
+                <ul class="slide-wrap">
+                    <li>
+                        <img src="images/main__wallpaper4.jpg" class="main__wallpaper">
+                    </li>
+                    <li class="slide__title title-4 slide-text">
+                        2020<br>AI Research Outreach
+                    </li>
+                    <li class="slide__explain explain-4 slide-text">
+                        Submission : 22nd June ~ 25th August
+                    </li>
+                    <li class="main__read-more">
+                        <i class="fas fa-long-arrow-alt-right"> Read more</i>
+                    </li>
+                    <li class="slide__btn btn">
+                        <span>
+                            <button class="btn-1"></button>
+                        </span>
+                        <span>
+                            <button class="btn-2"></button>
+                        </span>
+                        <span>
+                            <button class="btn-3"></button>
+                        </span>
+                        <span>
+                            <button class="btn-4"></button>
+                        </span>
+                    </li>
+                </ul>
             </li>
         </ul>
-        
+        <div class="main__arrow">
+            <i class="fas fa-arrow-left"></i>
+            <i class="fas fa-arrow-right"></i>
+        </div>
        
     </main>
 
     <nav class="nav">
         <div class="nav__title">Research Areas</div>
         <ul class="nav__list">
-            <li class="nav__list list">
-                <a href="">
-                    <i class="far fa-lightbulb"></i>
-                    <div class="list-title">
-                        AI Algorithms
-                    </div>
-                    <div class="list-comment">
-                        Understatnding users and<br>
-                        environments with human-level<br>
-                        intelligence
-                    </div>
-                </a>
+            <li class="row1">
+                <div class="nav__list list">
+                    <a href="">
+                        <i class="fas fa-lightbulb"></i>                    
+                        <div class="list-title">
+                            AI Algorithms
+                        </div>
+                        <div class="list-comment">
+                            Understatnding users with human-level intelligence
+                        </div>
+                    </a>
+                </div>
+                <div class="nav__list list">
+                    <a href="">
+                        <i class="fas fa-database"></i>                    
+                        <div class="list-title">
+                            Computing Platform
+                        </div>
+                        <div class="list-comment">
+                            A new Computing processor that<br>
+                            mimics the human brain
+                        </div>
+                    </a>
+                </div>
+                <div class="nav__list list">
+                    <a href="">
+                        <i class="fas fa-stopwatch"></i>                      
+                        <div class="list-title">
+                            Human Augmentation
+                        </div> 
+                        <div class="list-comment">
+                            Technology that Expanding<br>
+                            Human Capabilities
+                        </div>
+                    </a>
+                </div>
             </li>
-            <li class="nav__list list">
-                <a href="">
-                    <i class="fas fa-database"></i>                    
-                    <div class="list-title">
-                        Computing Platform
-                    </div>
-                    <div class="list-comment">
-                        A new Computing processor that<br>
-                        mimics the human brain
-                    </div>
-                </a>
+            <li class="row2">
+                <div class="nav__list list">
+                    <a href="">
+                        <i class="fas fa-lightbulb"></i>                    
+                        <div class="list-title">
+                            AI Algorithms
+                        </div>
+                        <div class="list-comment">
+                            Understatnding users with human-level intelligence
+                        </div>
+                    </a>
+                </div>
+                <div class="nav__list list">
+                    <a href="">
+                        <i class="fas fa-database"></i>                    
+                        <div class="list-title">
+                            Computing Platform
+                        </div>
+                        <div class="list-comment">
+                            A new Computing processor that<br>
+                            mimics the human brain
+                        </div>
+                    </a>
+                </div>
+                <div class="nav__list list">
+                    <a href="">
+                        <i class="fas fa-stopwatch"></i>                      
+                        <div class="list-title">
+                            Human Augmentation
+                        </div> 
+                        <div class="list-comment">
+                            Technology that Expanding<br>
+                            Human Capabilities
+                        </div>
+                    </a>
+                </div>
             </li>
-            <li class="nav__list list">
-                <a href="">
-                    <i class="fas fa-stopwatch"></i>                      
-                    <div class="list-title">
-                        Human Augmentation
-                    </div> 
-                    <div class="list-comment">
-                        Technology that Expanding<br>
-                        Human Capabilities
-                    </div>
-                </a>
+            <li class="row3">
+                <div class="nav__list list">
+                    <a href="">
+                        <i class="fas fa-lightbulb"></i>                    
+                        <div class="list-title">
+                            AI Algorithms
+                        </div>
+                        <div class="list-comment">
+                            Understatnding users with human-level intelligence
+                        </div>
+                    </a>
+                </div>
+                <div class="nav__list list">
+                    <a href="">
+                        <i class="fas fa-database"></i>                    
+                        <div class="list-title">
+                            Computing Platform
+                        </div>
+                        <div class="list-comment">
+                            A new Computing processor that<br>
+                            mimics the human brain
+                        </div>
+                    </a>
+                </div>
+                <div class="nav__list list">
+                    <a href="">
+                        <i class="fas fa-stopwatch"></i>                      
+                        <div class="list-title">
+                            Human Augmentation
+                        </div> 
+                        <div class="list-comment">
+                            Technology that Expanding<br>
+                            Human Capabilities
+                        </div>
+                    </a>
+                </div>
             </li>
-            <li class="nav__list list">
-                <a href="">
-                    <i class="fas fa-fingerprint"></i>                   
-                    <div class="list-title">
-                        AI Algorithms
-                    </div>
-                    <div class="list-comment">
-                        Understatnding users and<br>
-                        environments with human-level<br>
-                        intelligence
-                    </div>
-                </a>
-            </li>
-            <li class="nav__list list">
-                <a href="">
-                    <i class="fas fa-brain"></i>                        
-                    <div class="list-title">
-                        Computing Platform
-                    </div>
-                    <div class="list-comment">
-                        A new Computing processor that<br>
-                        mimics the human brain
-                    </div>
-                </a>
-            </li>
-            <li class="nav__list list">
-                <a href="">
-                    <i class="fab fa-codepen"></i>
-                    <div class="list-title">
-                        Human Augmentation
-                    </div>
-                    <div class="list-comment">
-                        Technology that Expanding<br>
-                        Human Capabilities
-                    </div>
-                </a>
-            </li>
-            <li class="nav__list list">
-                <a href="">
-                    <i class="fas fa-qrcode"></i>                    
-                    <div class="list-title">
-                        AI Algorithms
-                    </div>
-                    <div class="list-comment">
-                        Understatnding users and<br>
-                        environments with human-level<br>
-                        intelligence
-                    </div>
-                </a>
-            </li>
-            <li class="nav__list list">
-                <a href="">
-                    <i class="fab fa-cloudversify"></i>      
-                    <div class="list-title">
-                        Computing Platform              
-                    </div>
-                    <div class="list-comment">
-                        A new Computing processor that<br>
-                        mimics the human brain
-                    </div>
-                </a>
-            </li>
-            <li class="nav__list list">
-                <a href="">
-                    <i class="fas fa-circle-notch"></i>
-                    <div class="list-title">
-                        Huamn Augmentation
-                    </div>
-                    <div class="list-comment">
-                        Technology that Expanding<br>
-                        Human Capabilities
-                    </div>
-                </a>
-            </li>
-        </ul>
+        </div>
     </nav>
 
 </body>
