--- a/cover.html
+++ b/cover.html
@@ -408,10 +408,6 @@
                 </ul>
             </li>
         </ul>
-        <div class="main__arrow">
-            <i class="fas fa-arrow-left"></i>
-            <i class="fas fa-arrow-right"></i>
-        </div>
        
     </main>
 
@@ -531,6 +527,25 @@
             </li>
         </div>
     </nav>
+
+    <section class="section">
+        <div class="information info info">
+            <div class="info__left">
+                <span>Privacy Statement</span>
+                <span>|</span>
+                <span>Legal Notice</span>
+                <span>|</span>
+                <span>Privacy Policy</span>
+            </div>
+            <div class="info__righy">
+                <i class="fab fa-slack"></i>
+            </div>
+        </div>
+        <div class="addinfo">
+            <span>130, Samsung-ro, Yeongtong-gu, Suwon-si, Gyeonggi-do, 16678, Korea. Tel / +82-31-8061-1114<br>
+                Copyright© 2005-2018 SAMSUNG All Rights Reserved.</span>
+        </div>
+    </section>
 
 </body>
 </html>
