--- a/cover.html
+++ b/cover.html
@@ -547,5 +547,9 @@
         </div>
     </section>
 
+    <div class="bigScreen">
+        <span class="bigScreen__text">화면 크기를 전체로 키워주세요ㅠㅠ</span>
+    </div>
+
 </body>
 </html>
